Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -4,6 +4,7 @@
 
 1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y:
 
+Table 1.
 | bill type    | specifics             | amounts | calculations                                                    |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
 | bills sold   | bills of exchange     |       a | (c + d) - (a + b)                                               |
@@ -21,6 +22,7 @@
 
 2. Consequently, a adjacency matrix for a a generic branch network with branches X,Y,Z at a point in time t1 looks as follows:
 
+Table 2.
 |   | X  |     |       |   | Y  |     |        |   | Z  |     |      |   |
 |---|----|-----|-------|---|----|-----|--------|---|----|-----|------|---|
 | **X** | BS | b/e |    -   |  - | BS | b/e | a      |   | BS | b/e | a’   |   |
@@ -39,10 +41,11 @@
 #### Notes:
 > * for obvious reasons, branches cannot send amounts to themselves. Therefore, these cells jave been filled with `-`.
 > * as in the above table, amounts sent are expressed by means of generic letters, `a`, `b`, `c`, `d`, `a'`, `b'` etc.
+> * The direction is important: it must be remembered that in network analysis, by convention, the direction goes from from the rows to the columns. Hence, the flow from X to Y, which we generically defined as `a` in table 1 can now be found as `a` in the second row, third column, under Y; vice versa, the flows from Y to X, 3 can be found as `a''`, `b''`, etc. on row 3, column 2, under X
 
 
 
-3. A **methodological novelty** of the book is *the introduction of a measure by means of which we express not only the relative exchange position of a branch vis-a-vis another one, but also vis-a-vis the whole branch network*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
+3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express not only the relative exchange position of a branch vis-a-vis another one, but also vis-a-vis the whole branch network*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
 
 |       | X                                    | Y                                     | Z                                     |                      |
 |-------|--------------------------------------|---------------------------------------|---------------------------------------|----------------------|
