Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -43,7 +43,7 @@ Table 2.
 #### Notes:
 > * for obvious reasons, branches cannot send amounts to themselves. Therefore, these cells jave been filled with `-`.
 > * as in the above table, amounts sent are expressed by means of generic letters, `a`, `b`, `c`, `d`, `a'`, `b'` etc.
-> * The direction is important: it must be remembered that in network analysis, by convention, the direction goes from from the rows to the columns. Hence, the flow from X to Y, which we generically defined as `a` in table 1 can now be found as `a` in the second row, third column, under Y; vice versa, the flows from Y to X, 3 can be found as `a''`, `b''`, etc. on row 3, column 2, under X
+> * The direction is important: it must be remembered that in network analysis, by convention, the direction goes from from the rows to the columns. Hence, the flow from X to Y, which we generically defined as `a` in table 1 can now be found as `a` in the second row, third column, under Y; vice versa, the flows from Y to X, 3 can be found as `a''`, `b''`, etc. on row 6, column 4, under X.
 
 
 
