--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -7,6 +7,7 @@
 
 ### R-project & Python
 
+> * [NetworkX](https://networkx.github.io/) is a Python library for studying graphs and networks, enabling a variety of lay-outs for network graphs.
 > * documentation about lay-out possibilities with the [igraph package](http://igraph.org/) for R and Python can be found [here](http://igraph.org/c/doc/igraph-Layout.html).
 > * there exist separate tutorials for [python](http://igraph.org/python/doc/tutorial/tutorial.html) and [R](http://igraph.org/r/doc/)
 > * note that, as described above, our analysis exclusively uses force-directed layouts as proposed by, among others, [Kamada-Kawai](https://linkinghub.elsevier.com/retrieve/pii/0020019089901026) and [Fruchterman-Reingold](http://onlinelibrary.wiley.com/doi/10.1002/spe.4380211102/abstract). 
