Update 3. software packages and algorithms employed.md

--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -11,3 +11,4 @@
 > * documentation about lay-out possibilities with the [igraph package](http://igraph.org/) for R and Python can be found [here](http://igraph.org/c/doc/igraph-Layout.html).
 > * there exist separate tutorials for [python](http://igraph.org/python/doc/tutorial/tutorial.html) and [R](http://igraph.org/r/doc/)
 > * note that, as described above, our analysis exclusively uses force-directed layouts as proposed by, among others, [Kamada-Kawai](https://linkinghub.elsevier.com/retrieve/pii/0020019089901026) and [Fruchterman-Reingold](http://onlinelibrary.wiley.com/doi/10.1002/spe.4380211102/abstract). 
+> * As always, [StackOverflow](https://stackoverflow.com/) is a great means for exploring the potential and limitations of the packages, possible visualizations and so on.
