Update 3. software packages and algorithms employed.md

--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -10,5 +10,5 @@
 > * [NetworkX](https://networkx.github.io/) is a Python library for studying graphs and networks, enabling a variety of lay-outs for network graphs.
 > * documentation about lay-out possibilities with the [igraph package](http://igraph.org/) for R and Python can be found [here](http://igraph.org/c/doc/igraph-Layout.html).
 > * there exist separate tutorials for [python](http://igraph.org/python/doc/tutorial/tutorial.html) and [R](http://igraph.org/r/doc/)
-> * note that, as described above, our analysis exclusively uses force-directed layouts as proposed by, among others, [Kamada-Kawai](https://linkinghub.elsevier.com/retrieve/pii/0020019089901026) and [Fruchterman-Reingold](http://onlinelibrary.wiley.com/doi/10.1002/spe.4380211102/abstract). 
+> * note that, as described above, our analysis exclusively uses force-directed layouts as proposed by, among others, [Kamada-Kawai](https://linkinghub.elsevier.com/retrieve/pii/0020019089901026) and [Fruchterman-Reingold](http://onlinelibrary.wiley.com/doi/10.1002/spe.4380211102/abstract). Tutorials for R include code snippets for [KK](http://igraph.org/r/doc/layout_with_kk.html) and [FR](http://igraph.org/r/doc/layout_with_fr.html); see [here](http://igraph.org/python/doc/igraph-pysrc.html#Graph.layout_kamada_kawai) and [here](http://igraph.org/python/doc/igraph-pysrc.html#Graph.layout_fruchterman_reingold) for Python.
 > * As always, [StackOverflow](https://stackoverflow.com/) is a great means for exploring the potential and limitations of the packages, possible visualizations and so on.
