--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -47,7 +47,9 @@ Table 2.
 
 
 
-3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express not only the relative exchange position of a branch vis-a-vis another one, but also vis-a-vis the whole branch network*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
+3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express the relative share of each and every node in closing the bank’s exchange cycle*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). Note that the latter gives us a (positive or negative) number for any branch in any semester. This number —which is, by definition, the inverse of a branch’s exchange position at semestern— functions as the indicator of a branch’s contribution to providing exchange cover on the branch network. Branches with a positive number are ‘givers’, i.e. they enable other branches to accumulate net surpluses. Vice versa, branches with a negative number are receivers or, in extreme cases, ‘sinks’, causing other branches to experience a drain on their capital. We call the ranking of every branch at any semestern the ‘flow-of-fund index’ (FoF-index).
+
+This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
 
 |       | X                                    | Y                                     | Z                                     |                      |
 |-------|--------------------------------------|---------------------------------------|---------------------------------------|----------------------|
