Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -47,9 +47,9 @@ Table 2.
 
 
 
-3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express the relative share of each and every node in closing the bank’s exchange cycle*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). Note that the latter gives us a (positive or negative) number for any branch in any semester. This number —which is, by definition, the inverse of a branch’s exchange position at semestern— functions as the indicator of a branch’s contribution to providing exchange cover on the branch network. Branches with a positive number are ‘givers’, i.e. they enable other branches to accumulate net surpluses. Vice versa, branches with a negative number are receivers or, in extreme cases, ‘sinks’, causing other branches to experience a drain on their capital. We call the ranking of every branch at any semestern the ‘flow-of-fund index’ (FoF-index).
+3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express the relative share of each and every node in closing the bank’s exchange cycle*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). Note that the latter gives us a (positive or negative) number for any branch in any semester. This number —which is, *by definition*, the inverse of a branch’s exchange position at any semester— functions as the indicator of a branch’s contribution to providing exchange cover on the branch network. Branches with a positive number are ‘givers’, i.e. they enable other branches to accumulate net surpluses. Vice versa, branches with a negative number are receivers or, in extreme cases, ‘sinks’, causing other branches to experience a drain on their capital. We call the ranking of every branch at any semester the ‘flow-of-fund index’ (FoF-index).
 
-This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
+This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the FoF-index of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
 
 |       | X                                    | Y                                     | Z                                     |                      |
 |-------|--------------------------------------|---------------------------------------|---------------------------------------|----------------------|
@@ -59,7 +59,7 @@ This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the e
 |       | **SUM2:(Y→X)+(Z→X)**                 |                                       |                                       |                      |
 
 
-4. Having calculated the exchange position of *every* branch vis-a-vis the branch network at *all* points in time, we can proceed with a **time series**:
+4. Having calculated the FoF-index of *every* branch vis-a-vis the branch network at *all* points in time, we can proceed with a **time series**:
 
 |       | t1                  | t2  | t3  | ... |
 |-------|---------------------|-----|-----|-----|
@@ -71,9 +71,9 @@ The latter's visualization is graph 1 (below)
 
 ### Ethnographic relevance
 
-> * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' exchange position of certain branches versus others (either X or Y) and, by extension, the possibility of a negative exchange position of a certain branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations. See graph 1 below.
+> * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' FoF-index of certain branches versus others (either X or Y) and, by extension, the possibility of a negative FoF-index of a certain branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations. See graph 1 below.
 
-Graph 1: YSB branches exchange position - a time series, 1893-1908
+Graph 1: YSB branches FoF-index - a time series, 1893-1908
 ![YSB branches exchange position - a time series](/YSB_centrality1.png)
 
 Source: [own data and analysis](https://plot.ly/~michaelschiltz/13#plot)
