Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -47,7 +47,7 @@ Table 2.
 
 
 
-3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express the relative share of each and every node in closing the bank’s exchange cycle*. We can achieve this by calculating the total amount of funds a branch received from all other branches (i.e. `SUM2`), and deduct that from the total amount of funds sent all other branches (`SUM1`). Note that the latter gives us a (positive or negative) number for any branch in any semester. This number —which is, *by definition*, the inverse of a branch’s exchange position at any semester— functions as the indicator of a branch’s contribution to providing exchange cover on the branch network. Branches with a positive number are ‘givers’, i.e. they enable other branches to accumulate net surpluses. Vice versa, branches with a negative number are receivers or, in extreme cases, ‘sinks’, causing other branches to experience a drain on their capital. We call the ranking of every branch at any semester the ‘flow-of-fund index’ (`FoF-index`).
+3. An important **methodological novelty** of the book is *the introduction of a measure by means of which we express the relative share of each and every node in closing the bank’s exchange cycle*. We can achieve this by calculating the total amount of funds a branch received from all other branches (i.e. `SUM2`), and deduct that from the total amount of funds sent all other branches (`SUM1`). Note that the latter gives us a (positive or negative) number for any branch in any semester. This number —which is, *by definition*, the inverse of a branch’s exchange position at any semester— functions as the indicator of a branch’s contribution to providing exchange cover on the branch network. Branches with a positive number are ‘givers’, i.e. they enable other branches to accumulate net surpluses. Vice versa, branches with a negative number are 'takers' or, in extreme cases, ‘sinks’, causing other branches to experience a drain on their capital. We call the ranking of every branch at any semester the ‘flow-of-fund index’ (`FoF-index`).
 
 This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the `FoF-index` of branch X in a simple 3-branch network (X, Y, Z) at time `t1` can be done as follows:
 
@@ -78,7 +78,7 @@ Graph 1: YSB branches FoF-index - a time series, 1893-1908
 
 Source: [own data and analysis](https://plot.ly/~michaelschiltz/13#plot)
 
-*Legend*: Y: Yokohama Head Office; K: Kobe; L: London; NY: New York LY: Lyon; SF: San Francisco; HW: Hawai; S: Shanghai; H: Hankow; B: Mumbai (Bombay); HK: Hong Kong; T: Tokyo; N: Nagasaki; TJ: Tianjin; NZ: Niuzhang; P: Beijing (Peking); D: Dairen; LI: Liaoyang; M: Mukden; LS: Lushun; A: Andong; Z: Yantai (Chefoo); O: Osaka; TL: Tieling; C: Changchun; CBI: correspondent banks (international); CBD: correspondent banks (domestic). 
+*Legend*: Y: Yokohama Head Office 横浜本店; K: Kobe 神戸; L: London; NY: New York LY: Lyon; SF: San Francisco; HW: Hawai; S: Shanghai 上海; H: Hankow 漢口; B: Mumbai (Bombay); HK: Hong Kong 香港; T: Tokyo 東京; N: Nagasaki 長崎; TJ: Tianjin 天津; NZ: Niuzhang 牛荘; P: Beijing (Peking) 北京; D: Dairen 大連; LI: Liaoyang 遼陽; M: Mukden 奉天; LS: Lushun 旅順; A: Andong 安東; Z: Yantai (Chefoo) 芝罘; O: Osaka 大阪; TL: Tieling 鐵嶺; C: Changchun 長春; CBI: correspondent banks (international); CBD: correspondent banks (domestic). 
 
 
 ### Rounding
