--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -14,7 +14,8 @@ Table 1.
 |              | telegraphic transfers |       `d` | conversions of `(((c + d) - (a + b)) + d)` into Japanese yen (JPY)|
 
 #### Notes:
-> * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
+> * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another. If you need to understand why `bills sold` need to be subtracted from `bills bought`, consider the following:
+>> bills bought is the category signifying a positive transfer of funds, as branch X, after buying a bill from an exporter in the country of X, sends it on to branch Y, which books it as a ‘bill for collection’ (*daikin toritate tegata* 代金取立手形). At maturity, it collects the money as ‘adverse exchange’ (*gyaku kawase* 逆為替 or, alternatively, *toritate kawase* 取立為替) from an importer in the country in which Y is located, and books the bill to its asset side as a ‘bill collected’. In the case of export bills, money thus follows, or in other words, has the same direction of, the goods. In the case of bills sold, however, the direction of the transfer is reversed. Branch X sells a bill to an importer of country X (so the latter can remit his payment to an exporter in country Y), and receives an amount of domestic currency for the latter. Branch Y deals with the bill as a ‘bill payable’, as it will be in charge of the pay-out into to the account of the exporter in the country of Y. Clearly, the latter operation implies a transfer of funds from branch Y to branch X, or, in other words, a ‘negative transfer’.
 > * the `amount of interest bills (d)` is optional, i.e. is typically zero for flows among most branches, and this for a good reason: typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this (mostly, but not exclusively) because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction. One typically finds them as sent from London or New York to Yokohama, Kobe (to a lesser degree), and Shanghai.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
 > * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
