Update 2. data inclusion and exclusion.md

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -12,9 +12,9 @@
 
 Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/
 
-### Balance sheet data
+### Balance sheet data: stock data
 
-> * in the Midterm reports of the Yokohama Specie Bank, balance sheet data are generally included as follows:
+> * in the Midterm reports of the Yokohama Specie Bank, stock data are generally included as follows:
 
 >| [name]   |          |          | 店名 branch name                            |
 >|----------|----------|----------|---------------------------------------------|
