Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -112,3 +112,4 @@ Yoshiwara Tatsuno has focused on the fact that interest bills were not only sent
 
 ## C. Other Balance Sheet Data
 
+see [here](https://github.com/michaelschiltz/even-keel/blob/master/2.%20data%20inclusion%20and%20exclusion.md#balance-sheet-data-stock-data)
