Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -79,7 +79,7 @@ The latter's visualization is graph 1 (below)
 Graph 1: YSB branches FoF-index - a time series, 1893-1908
 ![YSB branches exchange position - a time series](/YSB_centrality1.png)
 
-Source: [own data and analysis](https://plot.ly/~michaelschiltz/13#plot)
+Source: [own data and analysis](https://plot.ly/~michaelschiltz/13/ysb-branches-centrality-1893-1908/)
 
 *Legend*: Y: Yokohama Head Office 横浜本店; K: Kobe 神戸; L: London; NY: New York LY: Lyon; SF: San Francisco; HW: Hawai; S: Shanghai 上海; H: Hankow 漢口; B: Mumbai (Bombay); HK: Hong Kong 香港; T: Tokyo 東京; N: Nagasaki 長崎; TJ: Tianjin 天津; NZ: Niuzhang 牛荘; P: Beijing (Peking) 北京; D: Dairen 大連; LI: Liaoyang 遼陽; M: Mukden 奉天; LS: Lushun 旅順; A: Andong 安東; Z: Yantai (Chefoo) 芝罘; O: Osaka 大阪; TL: Tieling 鐵嶺; C: Changchun 長春; CBI: correspondent banks (international); CBD: correspondent banks (domestic). 
 
