Update 5. quality and nature of sources for construction of the dataset.md

--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -1,3 +1,6 @@
 ## The Accounts: Problems of Analysis
 
-As noted in Frank King's *The History of the Hongkong and Shanghai Banking Corporation*,
+> As noted in Frank King's *The History of the Hongkong and Shanghai Banking Corporation* (Vol. I, p. 34),
+
+>> "Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies."
+
