Update 5. quality and nature of sources for construction of the dataset.md

--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -6,18 +6,18 @@
 
 > The same observation holds for the Yokohama Specie Bank accounts used for the monograph (‘Midterm’ reports, called hanki-hōkoku 半季報告, or, originally, kōkajō 考課状 (literally ‘assessment report’), notably for the period January 1893 until July 1908.). Published on a semestrial basis, as was the case with most exchange banks at the time, they provide an insight in accumulated assets and liabilities for each 6-month period. Their importance for our understanding of the activities and management of a late nineteenth century exchange bank can be hardly overestimated. Highly reliable for especially the period around 1900, they provide the necessary shortcut for inter-branch connections that would otherwise be painstaking to reconstruct, for instance on the basis of the ledgers of each individual branch.
 > In their most basic form, the Midterm reports almost all contain the following items:
->> * a balance sheet listing the bank’s main assets and liabilities (mostly included as fold-out in the back-cover) (kashakiri-taishōhyō 貸借対照表)
-* a statement on the bank’s shareholders fund; its reserve fund(s) (Jpn. kabukin shotsumitatekin oyobi junbikin no koto 株金諸積立金及ビ準備金ノ事)
-* a statement on deposits (Jpn. yokin no koto 預金ノ事)
-* a statement of loans and bills discounted (Jpn. kashikin oyobi tegata waribiki no koto 貸金及ビ手形割引ノ事)
-* a statement on its foreign exchange holdings and movements (Jpn. kaigai kawase no koto 海外為替ノ事)
-* a statement on inland bills (naikoku kawase no koto 内国為替ノ事)
-* a statement on rediscounting activity (sai-waribiki tegata no koto 再割引手形ノ事)
-* a statement on loans payable (kari-irekin no koto 借入金ノ事)
-* a statement on holdings of silver and gold money; cash on deposit (kingin zaidaka oyobi yotakukin no koto 金銀在高及ビ預託金ノ事) 
-* a statement on holdings of public loans and other securities (kōsai shōsho no koto 公債證書ノ事)
-* a statement on property (shoyūbutsu no koto 所有物ノ事)
-* a statement on holdings of gold and silver bullion and foreign currencies (jigane gin oyobi gaikoku ka no koto 地金銀及ビ外国貨幣ノ事)
-* a statement of income derived from the selling and buying of stocks (kabushiki baibai jōju no koto 株式売買譲受ノ事)
-* a profit and loss statement (son’eki kin no koto 損益金ノ事); and 
-* a statement with respect to the allocation of profits (riekikin bunpaihō no koto  利益金分配方ノ事)
+>> * a balance sheet listing the bank’s main assets and liabilities (mostly included as fold-out in the back-cover) (*kashakiri-taishōhyō* 貸借対照表)
+>> * a statement on the bank’s shareholders fund; its reserve fund(s) (Jpn. *kabukin shotsumitatekin oyobi junbikin no koto* 株金諸積立金及ビ準備金ノ事)
+>> * a statement on deposits (Jpn. *yokin no koto* 預金ノ事)
+>> * a statement of loans and bills discounted (Jpn. *kashikin oyobi tegata waribiki no koto* 貸金及ビ手形割引ノ事)
+>> * a statement on its foreign exchange holdings and movements (Jpn. *kaigai kawase no koto* 海外為替ノ事)
+>> * a statement on inland bills (* naikoku kawase no koto* 内国為替ノ事)
+>> * a statement on rediscounting activity (*sai-waribiki tegata no koto* 再割引手形ノ事)
+>> * a statement on loans payable (*kari-irekin no koto* 借入金ノ事)
+>> * a statement on holdings of silver and gold money; cash on deposit (*kingin zaidaka oyobi yotakukin no koto* 金銀在高及ビ預託金ノ事) 
+>> * a statement on holdings of public loans and other securities (*kōsai shōsho no koto* 公債證書ノ事)
+>> * a statement on property (*shoyūbutsu no koto* 所有物ノ事)
+>> * a statement on holdings of gold and silver bullion and foreign currencies (*jigane gin oyobi gaikoku ka no koto* 地金銀及ビ外国貨幣ノ事)
+>> * a statement of income derived from the selling and buying of stocks (*kabushiki baibai jōju no koto* 株式売買譲受ノ事)
+>> * a profit and loss statement (*son’eki kin no koto* 損益金ノ事); and 
+>> * a statement with respect to the allocation of profits (*riekikin bunpaihō no koto*  利益金分配方ノ事)
