--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -1,5 +1,6 @@
 ## The Accounts: Problems of Analysis
 
+### Sources:
 > As noted in Frank King's *The History of the Hongkong and Shanghai Banking Corporation* (Vol. I, p. 34),
 
 >> "Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies."
@@ -21,3 +22,8 @@
 >> * a statement of income derived from the selling and buying of stocks (*kabushiki baibai jōju no koto* 株式売買譲受ノ事)
 >> * a profit and loss statement (*son’eki kin no koto* 損益金ノ事); and 
 >> * a statement with respect to the allocation of profits (*riekikin bunpaihō no koto*  利益金分配方ノ事)
+
+> For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). Note, however, that (5) and (6) are not included here. The latter are flow data, meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network. Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding ‘matching funds’, the relative ‘exchange position’ of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between ‘bills bought’ and ‘bills sold’, how branches exchange liabilities and assets among each other, and thus make it in principle possible to identify trade patterns between countries and/or regions.  In later paragraphs we will discuss how the latter relate to the former.
+
+### Interpretative hurdles
+> As bookkeeping technicalities are covered elsewhere, we confine our discussion here to the reliability of sources. 
