--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -101,8 +101,9 @@ A particular point of attention must be reserved for the so-called `interest bil
 > * Yet another interpretation can be found in Bak (Park). In his view, interest bills functioned as remittances (*sōkin* 送金) of foreign exchange which were sent  by the branch/office in charge of collection (*toritate-ten* 取立店) to the branch/office that had purchased the bill (*kaitori-ten* 買取店). In other words, Bak believes that interest bills were a means of settling (squaring) accounts between branches (in Japanese referred to as remitting (*kaikin* 回金) (as opposed to reimbursing)). In this view, including the interest bills in the flow of funds also amounts to double-counting, yet in a way different from Taira’s interpretation. However, as is clear from e.g. interest bills handled by the New York office, *interest bills were also used for trade transactions*.
 > * Based on Nishimura's early discussion (see the description in the book), we suspect that their classification under `statement of loans and bills discounted` hints to their nature as finance bills rather than bills designating an underlying trade transaction (the latter being called 'real bills' at the time).
 > * The consequences of such conjecture may be profound. As we point out in the book, it hints to the existence of a late nineteenth century **carry trade**. We possess at least descriptive evidence of the latter:
->> "For bills related to East-Asia, one bookkeeping manual from 1907 provides the following narrative evidence: “The interest rate in London is, on average, between 3 and 4 per cent. [The international exchange banks] there purchase ‘Eastern bills’ [i.e. interest bills] on India, China and Japan. Given that the interest [on the latter] is normally around 6%, and given that they purchase Eastern bills by means of low-interest London funds, they are obviously running a very profitable business.” 
->This was certainly so after the Russo-Japanese War. According to the same source: “The interest on interest bills to East-Asia is normally 6%, but last year, due to problems in Russo-Japanese relations, the rate was increased to 7%”. In other words, even when estimating the yearly cost of London acceptance credit to be around 5% in the 1900s, arbitraging must have been a lucrative affair. And indeed, the share of interest bills in the total ‘bills sent’ portfolio of YSB London is very high (consistently more than 60% after 1898)." 石川由郎. 1907. 『英国為替銀行ニ関スル復命書』. 三井銀行. P. 67; p. 76.
+>>> "For bills related to East-Asia, one bookkeeping manual from 1907 provides the following narrative evidence: “The interest rate in London is, on average, between 3 and 4 per cent. [The international exchange banks] there purchase ‘Eastern bills’ [i.e. interest bills] on India, China and Japan. Given that the interest [on the latter] is normally around 6%, and given that they purchase Eastern bills by means of low-interest London funds, they are obviously running a very profitable business.” 
+>>This was certainly so after the Russo-Japanese War. According to the same source: 
+>>>“The interest on interest bills to East-Asia is normally 6%, but last year, due to problems in Russo-Japanese relations, the rate was increased to 7%”. In other words, even when estimating the yearly cost of London acceptance credit to be around 5% in the 1900s, arbitraging must have been a lucrative affair. And indeed, the share of interest bills in the total ‘bills sent’ portfolio of YSB London is very high (consistently more than 60% after 1898)." 石川由郎. 1907. 『英国為替銀行ニ関スル復命書』. 三井銀行. P. 67; p. 76.
 > * Sources:
 >> Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会. P. 250-251; Ishii Kanji. 1994. “Japanese Foreign Trade and the Yokohama Specie Bank, 1880-1913”, in Olive Checkland, Shizuya Nishimura, and Norio Tamaki (eds.), Pacific Banking, 1859-1959: East Meets West. New York: St. Martin’s Press. Pp. 22-23. Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p1–27. http://ci.nii.ac.jp/naid/40000792007. Bak Jun Geon 朴埈健. 1992. 「産業資本成立期における横浜正金銀行の資金循環構造–利付為替手形の処理問題を中心として.」 『経済論究』, March, p. 147–162.
 
