--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -16,7 +16,7 @@ Table 1.
 #### Notes:
 
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another. If you need to understand why `bills sold` need to be subtracted from `bills bought`, consider the following:
->> bills bought is the category signifying a positive transfer of funds, as branch X, after buying a bill from an exporter (and thus: paying out an amount of money) in the country of X, sends it on to branch Y, which books it as a ‘bill for collection’ (*daikin toritate tegata* 代金取立手形). At maturity, branch Y collects the money as ‘adverse exchange’ (*gyaku kawase* 逆為替 or, alternatively, *toritate kawase* 取立為替) from an importer in the country in which Y is located, and books the bill to its asset side as a ‘bill collected’. *In the case of export bills, money thus follows, or in other words, has the same direction of, the goods*. In the case of bills sold, however, the direction of the transfer is reversed. Branch X sells a bill to an importer of country X (so the latter can remit his payment to an exporter in country Y), and receives an amount of domestic currency for the latter. Branch Y deals with the bill as a ‘bill payable’, as it will be in charge of the pay-out into to the account of the exporter in the country of Y. Clearly, the latter operation implies a *transfer of funds from branch Y to branch X, or, in other words, a ‘negative transfer’*.
+>> bills bought is the category signifying a positive transfer of funds, as branch X, after buying a bill from an exporter (and thus: paying out an amount of money) in the country of X, sends it on to branch Y, which books it as a ‘bill for collection’ (*daikin toritate tegata* 代金取立手形). At maturity, branch Y collects the money as ‘adverse exchange’ (*gyaku kawase* 逆為替 or, alternatively, *toritate kawase* 取立為替) from an importer in the country in which Y is located, and books the bill to its asset side as a ‘bill collected’. *In the case of export bills, money thus follows, or in other words, has the same direction of, the goods*. In the case of bills sold, however, the direction of the transfer is reversed. Branch X sells a bill to an importer of country X (so the latter can remit his payment to an exporter in country Y), and receives an amount of domestic currency for the latter. Branch Y deals with the bill as a `bill payable`, as it will be in charge of the pay-out into to the account of the exporter in the country of Y. Clearly, the latter operation implies a *transfer of funds from branch Y to branch X, or, in other words, a ‘negative transfer’*.
 > * the `amount of interest bills (d)` is optional, i.e. is typically zero for flows among most branches, and this for a good reason: typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this (mostly, but not exclusively) because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction. One typically finds them as sent from London or New York to Yokohama, Kobe (to a lesser degree), and Shanghai.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
 > * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
@@ -105,7 +105,7 @@ A particular point of attention must be reserved for the so-called `interest bil
 >This was certainly so after the Russo-Japanese War. According to the same source: 
 >>“The interest on interest bills to East-Asia is normally 6%, but last year, due to problems in Russo-Japanese relations, the rate was increased to 7%”. In other words, even when estimating the yearly cost of London acceptance credit to be around 5% in the 1900s, arbitraging must have been a lucrative affair. And indeed, the share of interest bills in the total ‘bills sent’ portfolio of YSB London is very high (consistently more than 60% after 1898)." 石川由郎. 1907. 『英国為替銀行ニ関スル復命書』. 三井銀行. P. 67; p. 76.
 > * Sources:
->> Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会. P. 250-251; Ishii Kanji. 1994. “Japanese Foreign Trade and the Yokohama Specie Bank, 1880-1913”, in Olive Checkland, Shizuya Nishimura, and Norio Tamaki (eds.), Pacific Banking, 1859-1959: East Meets West. New York: St. Martin’s Press. Pp. 22-23. Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p1–27. http://ci.nii.ac.jp/naid/40000792007. Bak Jun Geon 朴埈健. 1992. 「産業資本成立期における横浜正金銀行の資金循環構造–利付為替手形の処理問題を中心として.」 『経済論究』, March, p. 147–162.
+>> Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会. P. 250-251; Ishii Kanji. 1994. “Japanese Foreign Trade and the Yokohama Specie Bank, 1880-1913”, in Olive Checkland, Shizuya Nishimura, and Norio Tamaki (eds.), *Pacific Banking, 1859-1959: East Meets West*. New York: St. Martin’s Press. Pp. 22-23. Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; Taira Tomoyuki 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p1–27. http://ci.nii.ac.jp/naid/40000792007. Bak Jun Geon 朴埈健. 1992. 「産業資本成立期における横浜正金銀行の資金循環構造–利付為替手形の処理問題を中心として.」 『経済論究』, March, p. 147–162.
 
 Yoshiwara Tatsuno has focused on the fact that interest bills were not only sent from liquid centers to non-liquid regions, but also *among liquid centers*. This is an element that I have left out of the database because these amounts are dwarfed by the former (esp. interest bills sent from London to Japan). He may, however, have a point. At least the *Economist* mentions the role of finance bills arriving from France and NY in the early twentieth century (see the book manuscript). Admittedly, it is not clear whether these finance bills were necessarily interest bills, but our conjecture in the book points to the plausibility hereof.
 > * Sources:
