--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -31,4 +31,4 @@
 
 > Put differently, early reports cleverly play into the discourse of the European (mostly British) liberal economic ideas by which observers since the 1930s have wanted to remember the first gold standard period. It is beyond doubt that such reports would be followed by leading financial outlets of the day: subtly, but convincingly, YSB demonstrated to an international readership that its knowledge of the expanding Asian market, bolstered by its presence in all but the smallest trading centers in the region, was second to none, apart perhaps from the Hongkong and Shanghai Banking Corporation.
 
-> I furthermore note YSB managers' preoccupation with 'overt transparency', as noted in internal discussions. The precision of the coverage in the reports between 1893 and 1908 was a topic at the first Meeting of the Managers of Asian Branches of YSB (*tōyō shitenchō kaigi* 東洋支店長会議; April 1908 at the Yokohama Head Office). Concretely, several managers worried that its foreign competitors might undertake a translation of the Mid-term reports, causing valuable “business secrets” of the bank to be “leaked” (*naibu no himitsu wo morasu osore ari* 内部ノ秘密ヲ洩ラス恐レアリ). 横濱正金銀行. 19--. 東洋支店長会議録. [横浜正金銀行]. http://ci.nii.ac.jp/ncid/BN04887997. P. 310. For HSBC too, secrecy was a continuing issue, as Frank King testified.
+> I furthermore note YSB managers' preoccupation with 'overt transparency', as noted in internal discussions. The precision of the coverage in the reports between 1893 and 1908 was a topic at the first Meeting of the Managers of Asian Branches of YSB (*tōyō shitenchō kaigi* 東洋支店長会議; April 1908 at the Yokohama Head Office). Concretely, several managers worried that its foreign competitors might undertake a translation of the Mid-term reports, causing valuable “business secrets” of the bank to be “leaked” (*naibu no himitsu wo morasu osore ari* 内部ノ秘密ヲ洩ラス恐レアリ). 横濱正金銀行. 19--. 『東洋支店長会議録』. [横浜正金銀行]. http://ci.nii.ac.jp/ncid/BN04887997. P. 310. For HSBC too, secrecy was a continuing issue, as Frank King testified.
