--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -5,7 +5,8 @@
 
 >> "Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies."
 
-> The same observation holds for the Yokohama Specie Bank accounts used for the monograph (‘Midterm’ reports, called hanki-hōkoku 半季報告, or, originally, kōkajō 考課状 (literally ‘assessment report’), notably for the period January 1893 until July 1908.). Published on a semestrial basis, as was the case with most exchange banks at the time, they provide an insight in accumulated assets and liabilities for each 6-month period. Their importance for our understanding of the activities and management of a late nineteenth century exchange bank can be hardly overestimated. Highly reliable for especially the period around 1900, they provide the necessary shortcut for inter-branch connections that would otherwise be painstaking to reconstruct, for instance on the basis of the ledgers of each individual branch.
+> The same observation holds for the Yokohama Specie Bank accounts used for the monograph (‘Midterm’ reports, called hanki-hōkoku 半季報告, or, originally, kōkajō 考課状 (literally ‘assessment report’), notably for the period January 1893 until July 1908.). Published, relatively openly, on a semestrial basis and distributed among shareholders, as was the case with most exchange banks at the time, they provide an insight in accumulated assets and liabilities for each 6-month period. Their importance for our understanding of the activities and management of a late nineteenth century exchange bank can be hardly overestimated. Highly reliable for especially the period around 1900, they provide the necessary shortcut for inter-branch connections that would otherwise be painstaking to reconstruct, for instance on the basis of the ledgers of each individual branch.
+
 > In their most basic form, the Midterm reports almost all contain the following items:
 >> * a balance sheet listing the bank’s main assets and liabilities (mostly included as fold-out in the back-cover) (*kashakiri-taishōhyō* 貸借対照表)
 >> * a statement on the bank’s shareholders fund; its reserve fund(s) (Jpn. *kabukin shotsumitatekin oyobi junbikin no koto* 株金諸積立金及ビ準備金ノ事)
@@ -25,10 +26,14 @@
 
 > For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network. Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it in principle possible to identify trade patterns between countries and/or regions.  In later paragraphs we will discuss how the latter relate to the former.
 
-### Interpretative hurdles
+### Interpretative hurdles; how reliable are the published accounts?
 
 > As bookkeeping technicalities are covered [elsewhere](https://github.com/michaelschiltz/even-keel/blob/master/1.%20database%20architecture.md#notes), we confine our discussion here to the reliability of sources. As can be expected, the midterm reports are to a certain extent a function of the political positioning of Japan and its institutions. As we will discuss further below, this has had ―ironically― its fortunate implications for the discussion here. At a time when the country was factually too weak to unilaterally claim its place in the world order, YSB resorted to a sort of ‘news propaganda’ that was carefully geared to the information-hungry investor in London, Paris, or any other global financial market. As a result, early mid-term reports for 1893-1908 are very extensive, sensitively reflecting the market conditions that its branches faced, documenting the political and economic events that were to explain any volatility in its business record that to any extent could be considered extraordinary, and so on. 
 
 > Put differently, early reports cleverly play into the discourse of the European (mostly British) liberal economic ideas by which observers since the 1930s have wanted to remember the first gold standard period. It is beyond doubt that such reports would be followed by leading financial outlets of the day: subtly, but convincingly, YSB demonstrated to an international readership that its knowledge of the expanding Asian market, bolstered by its presence in all but the smallest trading centers in the region, was second to none, apart perhaps from the Hongkong and Shanghai Banking Corporation.
 
 > I furthermore note YSB managers' preoccupation with 'overt transparency', as noted in internal discussions. The precision of the coverage in the reports between 1893 and 1908 was a topic at the first Meeting of the Managers of Asian Branches of YSB (*tōyō shitenchō kaigi* 東洋支店長会議; April 1908 at the Yokohama Head Office). Concretely, several managers worried that its foreign competitors might undertake a translation of the Mid-term reports, causing valuable “business secrets” of the bank to be “leaked” (*naibu no himitsu wo morasu osore ari* 内部ノ秘密ヲ洩ラス恐レアリ). 横濱正金銀行. 19--. 『東洋支店長会議録』. [横浜正金銀行]. http://ci.nii.ac.jp/ncid/BN04887997. P. 310. For HSBC too, secrecy was a continuing issue, as Frank King testified.
+
+> Behind the published accounts, there was a process of auditing. After all, the semi-annual accounts were not a statementof the position of the Bsnk on the date stated. The tyranny of distance still being real, even after adoption of the telegraph, bank branches would close their books on different dates in order for their information to reach the Head Office in time. Clearly, the auditors had quite some things to be concerned with: the rate at which accounts were 'taken over', the time lag involved in integrating them with Head Office Accounts,the local assessment of non-performing loans, the valuation of public securities held etc.
+
+> This is not to say there may not have been a mismatch between the bank's official accounts. Judging from contemporary journalistic sources (the *Economist*, the *Investors' Monthly Manual*, etc.), shareholders/investors/observers made their own estimates of the so-called 'inner reserves'and the valuation of the securities held against the reserve fund; I furthermore suppose much depended on how these people evaluated the Bank's ongoing policy with respect to handling shifts and exchange rates, as also the discussion of the `even keel` in the *North China Herald* proves. 
