--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -34,6 +34,6 @@
 
 > I furthermore note YSB managers' preoccupation with 'overt transparency', as noted in internal discussions. The precision of the coverage in the reports between 1893 and 1908 was a topic at the first Meeting of the Managers of Asian Branches of YSB (*tōyō shitenchō kaigi* 東洋支店長会議; April 1908 at the Yokohama Head Office). Concretely, several managers worried that its foreign competitors might undertake a translation of the Mid-term reports, causing valuable “business secrets” of the bank to be “leaked” (*naibu no himitsu wo morasu osore ari* 内部ノ秘密ヲ洩ラス恐レアリ). 横濱正金銀行. 19--. 『東洋支店長会議録』. [横浜正金銀行]. http://ci.nii.ac.jp/ncid/BN04887997. P. 310. For HSBC too, secrecy was a continuing issue, as Frank King testified.
 
-> Behind the published accounts, there was a process of auditing. After all, the semi-annual accounts were not a statementof the position of the Bsnk on the date stated. The tyranny of distance still being real, even after adoption of the telegraph, bank branches would close their books on different dates in order for their information to reach the Head Office in time. Clearly, the auditors had quite some things to be concerned with: the rate at which accounts were 'taken over', the time lag involved in integrating them with Head Office Accounts,the local assessment of non-performing loans, the valuation of public securities held etc.
+> Behind the published accounts, there was a process of auditing. After all, the semi-annual accounts were not a statementof the position of the Bsnk on the date stated. The tyranny of distance still being real, even after adoption of the telegraph, bank branches would close their books on different dates in order for their information to reach the Head Office in time. Clearly, the auditors had quite some things to be concerned with: the rate at which accounts were 'taken over', the time lag involved in integrating them with Head Office Accounts,the local (i.e. branch-specific) assessment of non-performing loans, the valuation of public securities held etc.
 
-> This is not to say there may not have been a mismatch between the bank's official accounts. Judging from contemporary journalistic sources (the *Economist*, the *Investors' Monthly Manual*, etc.), shareholders/investors/observers made their own estimates of the so-called 'inner reserves'and the valuation of the securities held against the reserve fund; I furthermore suppose much depended on how these people evaluated the Bank's ongoing policy with respect to handling shifts and exchange rates, as also the discussion of the `even keel` in the *North China Herald* proves. 
+> This is not to say there may not have been a mismatch between the bank's official accounts and public perception. Judging from contemporary journalistic sources (the *Economist*, the *Investors' Monthly Manual*, etc.), shareholders/investors/observers made their own estimates of the so-called 'inner reserves'and the valuation of the securities held against the reserve fund; I furthermore suppose much depended on how these people evaluated the Bank's ongoing policy with respect to handling shifts and exchange rates, as also the discussions of the `even keel` in the *North China Herald* proves (see the monograph). However, this also reinforces the assumption that the mismatch should not have been too wide in order to be credible. *Confidence* was (and remains) one of a bank's most important assets, and the latter was arguably derived from the Bank's published figures. As in [Akerlof's famous thought experiment](http://www.jstor.org/stable/1879431), banks may have been incentivized to counteract information asymmetry by adopting (self-)certifying measures as reputation and prestige through transparency.
