Update 5. quality and nature of sources for construction of the dataset.md

--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -3,7 +3,7 @@
 ### Sources:
 > As noted in Frank King's *The History of the Hongkong and Shanghai Banking Corporation* (Vol. I, p. 34),
 
->> "Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies."
+>> `Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies.`
 
 > The same observation holds for the Yokohama Specie Bank accounts used for the monograph (‘Midterm’ reports, called *hanki-hōkoku* 半季報告, or, originally, *kōkajō* 考課状 (literally ‘assessment report’), notably for the period January 1893 until July 1908.). Published, relatively openly, on a semestrial basis and distributed among shareholders, as was the case with most exchange banks at the time, they provide an insight in accumulated assets and liabilities for each 6-month period. Their importance for our understanding of the activities and management of a late nineteenth century exchange bank can be hardly overestimated. Highly reliable for especially the period around 1900, they provide the necessary shortcut for inter-branch connections that would otherwise be painstaking to reconstruct, for instance on the basis of the ledgers of each individual branch.
 
