--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -24,7 +24,7 @@
 >> * a profit and loss statement (*son’eki kin no koto* 損益金ノ事); and 
 >> * a statement with respect to the allocation of profits (*riekikin bunpaihō no koto*  利益金分配方ノ事)
 
-> For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network. Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it in principle possible to identify trade patterns between countries and/or regions.  In later paragraphs we will discuss how the latter relate to the former.
+> For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network, and , importantly, *within a clearly delineated time interval* (accumulated assets/liabilities, or 'carried over from former semesters' are excluded).. Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it in principle possible to identify trade patterns between countries and/or regions.  In later paragraphs we will discuss how the latter relate to the former.
 
 ### Interpretative hurdles; how reliable are the published accounts?
 
